--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         
 
-        <section class="normal">
+        <section class="normal"></section>
             <p>
                 Arroba agora não pesa  <br>
                 É parte de um endereço <br>
